--- a/styles.scss
+++ b/styles.scss
@@ -134,11 +134,16 @@ svg.header-logo {
   border-left: 2px solid $gold;
 }
 .overlay-menu .icons-container,
-.connect .icons-container {
+.connect .icons-container,
+.social-banner .icons-container {
   margin: 5px 30px;
   display: grid;
   grid-template-columns: repeat(4, auto);
   justify-content: space-between;
+  margin: 3rem 6rem;
+  svg {
+    margin-bottom: 6rem;
+  }
 }
 
 .overlay-menu .icons-container svg {
@@ -408,12 +413,6 @@ nav ul ul {
 // connect
 .connect {
   text-align: center;
-  .icons-container {
-    margin: 3rem 6rem;
-    svg {
-      margin-bottom: 6rem;
-    }
-  }
 }
 // more to love
 .more-to-love-content {
@@ -430,4 +429,39 @@ nav ul ul {
 }
 h3.more {
   padding: 10px 0px 5px;
+}
+
+// footer
+
+.social-banner .icons-container {
+  margin: 0;
+  padding: 0 3rem;
+  svg {
+    margin: 3rem;
+  }
+}
+
+footer p,
+li {
+  font-size: 1.2rem;
+  padding: 2rem 0;
+}
+
+.links-end ul {
+  @include flex-column-center;
+  margin: 20px 0 60px;
+  list-style: none;
+  font-weight: $font-light;
+  li:hover {
+    color: $gold;
+  }
+}
+.copyright {
+  @include flex-column-center;
+  margin-bottom: 6rem;
+  p {
+    justify-items: center;
+    text-align: center;
+    font-weight: $font-light;
+  }
 }
