--- a/styles.scss
+++ b/styles.scss
@@ -56,13 +56,23 @@ h4 {
   border-style: solid none none none;
   border-width: 0.1rem;
 }
+.icons-container {
+  margin: 0;
+  padding: 0 3rem;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  justify-content: space-between;
+  svg {
+    margin: 3rem;
+  }
+}
 
 //header
 .header-container {
   position: fixed;
   width: 100%;
-  z-index: 999;
   background-color: #ffffff;
+  z-index: 9999;
 }
 .row1-header {
   display: flex;
@@ -70,8 +80,11 @@ h4 {
   padding: 1rem;
   flex-wrap: nowrap;
   margin-right: 4.5rem;
+  background-color: #ffffff;
+
   .row1-header-left {
     display: flex;
+    position: relative;
   }
 }
 svg.header-logo {
@@ -91,6 +104,7 @@ svg.header-logo {
   border-top: 1px solid $mediumgrey;
   overflow: auto;
   white-space: nowrap;
+  background-color: #ffffff;
 }
 
 .scroll-menu ul {
@@ -106,14 +120,21 @@ svg.header-logo {
 // drop-down menu - TO FIX
 .overlay-menu {
   position: absolute;
-  top: 50;
-  left: 0;
+  top: 48px;
+  left: -10px;
   width: 100vw;
   height: 100vh;
+  z-index: -10;
   background-color: $grey;
   overflow: hidden;
   transform: translateY(-120%);
   transition: transform 0.5s ease-in;
+  .icons-container {
+    svg {
+      width: 1.8rem;
+      margin: 0.5rem;
+    }
+  }
 }
 #hamburger-input:checked ~ .overlay-menu {
   transform: translateY(5.5%);
@@ -132,23 +153,6 @@ svg.header-logo {
   background-color: white;
   color: black;
   border-left: 2px solid $gold;
-}
-.overlay-menu .icons-container,
-.connect .icons-container,
-.social-banner .icons-container {
-  margin: 5px 30px;
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  justify-content: space-between;
-  margin: 3rem 6rem;
-  svg {
-    margin-bottom: 6rem;
-  }
-}
-
-.overlay-menu .icons-container svg {
-  padding: 10px 25px;
-  width: 18px;
 }
 
 // overlay sites sub-menu
@@ -413,6 +417,9 @@ nav ul ul {
 // connect
 .connect {
   text-align: center;
+  .icons-container {
+    margin-bottom: 4rem;
+  }
 }
 // more to love
 .more-to-love-content {
@@ -432,14 +439,6 @@ h3.more {
 }
 
 // footer
-
-.social-banner .icons-container {
-  margin: 0;
-  padding: 0 3rem;
-  svg {
-    margin: 3rem;
-  }
-}
 
 footer p,
 li {
@@ -464,4 +463,75 @@ li {
     text-align: center;
     font-weight: $font-light;
   }
+}
+// hamburger
+.Menu-container {
+  height: 25px;
+  width: 30px;
+  cursor: pointer;
+  margin: 10% auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -8px;
+  left: 0px;
+}
+
+.line {
+  position: absolute;
+  height: 2px;
+  width: 25px;
+  background-color: black;
+  transition: 0.4s ease;
+}
+
+#hamburger-input {
+  display: none;
+}
+
+.line::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 25px;
+  background-color: black;
+  top: -8px;
+  transition: 0.4s ease;
+}
+
+.line::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 25px;
+  background-color: black;
+  top: 8px;
+}
+
+#hamburger-input:checked + label #active {
+  transform: rotate(45deg);
+  background-color: $gold;
+}
+
+#hamburger-input:checked + label #active::before {
+  transform: rotate(-90deg) translateX(-8px);
+  background-color: $gold;
+}
+
+#hamburger-input:checked + label #active::after {
+  display: none;
+}
+.black-time-box {
+  background-color: black;
+  width: 50px;
+  height: 25px;
+  color: white;
+  font-size: 1.2rem;
+  padding: 2px 0 1px 5px;
+  position: relative;
+}
+.time {
+  position: absolute;
+  margin: 0;
 }
