--- a/styles.scss
+++ b/styles.scss
@@ -169,7 +169,7 @@ nav ul ul {
 .today {
   text-align: center;
   width: 100%;
-  padding: 10rem 0 2.5rem 0;
+  padding: 9rem 0 2.5rem 0;
 }
 .headline-image {
   img {
@@ -224,7 +224,7 @@ nav ul ul {
 .card-container {
   display: flex;
   overflow: auto;
-  padding: 3rem 0 3rem 12rem;
+  padding: 0 0 3rem 12rem;
 }
 
 // no-direct-flight & around the world
