--- a/styles.scss
+++ b/styles.scss
@@ -77,9 +77,10 @@ h4 {
 .row1-header {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  padding-top: 1rem;
   flex-wrap: nowrap;
-  margin-right: 4.5rem;
+  margin-left: 1rem;
+  margin-right: 4rem;
   background-color: #ffffff;
 
   .row1-header-left {
@@ -89,10 +90,10 @@ h4 {
 }
 svg.header-logo {
   width: 18rem;
-  padding: 0 6rem 0 1.5rem;
+  padding: 0.2rem 6rem 0 1rem;
 }
 .icon {
-  padding: 0.5rem;
+  padding: 1rem 0.5rem;
 }
 
 .row1-header-right svg:hover,
@@ -129,6 +130,8 @@ svg.header-logo {
   overflow: hidden;
   transform: translateY(-120%);
   transition: transform 0.5s ease-in;
+  // overflow: auto;
+
   .icons-container {
     svg {
       width: 1.8rem;
@@ -474,8 +477,6 @@ li {
   justify-content: center;
   align-items: center;
   position: relative;
-  top: -8px;
-  left: 0px;
 }
 
 .line {
