--- a/css/styles.css
+++ b/css/styles.css
@@ -52,17 +52,24 @@ h4 {
   position: fixed;
   width: 100%;
   background-color: #ffffff;
-  z-index: 9999;
+  z-index: 99;
+}
+
+h1 {
+  position: relative;
+  padding: 0.5rem 5rem 0;
+  z-index: 999;
 }
 
 .row1-header {
   display: flex;
   justify-content: space-between;
-  padding-top: 1rem;
+  padding: 0.5rem 5rem 0 2rem;
   flex-wrap: nowrap;
-  margin-left: 1rem;
-  margin-right: 4rem;
   background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 .row1-header .row1-header-left {
   display: flex;
@@ -351,28 +358,30 @@ li {
 
 @media screen and (min-width: 800px) {
   .row1-header {
-    justify-content: space-around;
-    margin: 0 2rem;
-    padding: 0;
+    justify-content: space-between;
+    padding: 0 5rem 0 3rem;
+    height: 8.5rem;
   }
   h1 {
     font-size: 0;
+    display: flex;
+    justify-content: center;
+    padding: 0;
   }
   svg.header-logo {
-    width: 37rem;
-    padding-right: 2.5rem;
+    width: 34rem;
+    padding: 0;
   }
   .row1-header-left {
-    width: 75vw;
+    width: 1.5rem;
     justify-content: space-between;
     align-items: center;
   }
   .row1-header-right {
-    width: 25vw;
     display: flex;
     justify-content: space-evenly;
   }
   .icon {
-    margin: 1rem;
+    margin: 1.5rem;
   }
 }/*# sourceMappingURL=styles.css.map */
