--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ svg.header-logo {
   text-align: center;
   width: 100%;
   padding: 9rem 0 2.5rem 0;
+  position: relative;
 }
 
 .headline-image img {
@@ -121,7 +122,7 @@ svg.header-logo {
   width: 100%;
   height: 22rem;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .today-text {
@@ -187,7 +188,7 @@ svg.header-logo {
   justify-content: flex-start;
   margin-bottom: 25px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .content-card img {
   width: 100%;
@@ -247,7 +248,7 @@ svg.header-logo {
   justify-content: flex-start;
   margin-bottom: 25px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   text-align: center;
   align-items: center;
   margin-top: 2.5rem;
@@ -314,7 +315,7 @@ svg.header-logo {
   justify-content: flex-start;
   margin-bottom: 25px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 200px;
   margin-bottom: 5rem;
 }
@@ -356,10 +357,62 @@ li {
   font-weight: 200;
 }
 
+@media screen and (min-width: 600px) {
+  h3 {
+    font-size: 2.5rem;
+    padding-bottom: 4.5rem;
+  }
+  .container {
+    padding: 4.5rem 2.5rem;
+  }
+  .headline-image img {
+    height: 35rem;
+  }
+  .today-text {
+    position: absolute;
+    bottom: 10rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    color: #ffffff;
+    padding: 4rem 12rem 0;
+  }
+  .play-circle img {
+    height: 5rem;
+  }
+  .no-direct-flight-content-container {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  .no-direct-flight-content-container img {
+    max-width: 100%;
+  }
+  @media screen and (max-width: 1024px) {
+    .around-the-world-content-container {
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 3rem;
+    }
+  }
+}
+
 @media screen and (min-width: 800px) {
+  .headline-image img {
+    height: 55rem;
+  }
+  .play-circle {
+    top: 35rem;
+  }
+  .today-text h2 {
+    font-size: 4rem;
+  }
+  .today-text p {
+    font-size: 1.8rem;
+  }
   .row1-header {
     justify-content: space-between;
-    padding: 0 5rem 0 3rem;
+    padding: 0 4rem 0 3rem;
     height: 8.5rem;
   }
   h1 {
@@ -384,4 +437,20 @@ li {
   .icon {
     margin: 1.5rem;
   }
-}/*# sourceMappingURL=styles.css.map */
+  .scroll-menu ul {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1.24px) {
+  .around-the-world-content-container {
+    flex-direction: row;
+    gap: 2rem;
+  }
+  .around-the-world-top,
+  .around-the-world-bottom {
+    display: flex;
+    gap: 2rem;
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
