--- a/css/styles.scss
+++ b/css/styles.scss
@@ -133,6 +133,7 @@ svg.header-logo {
   text-align: center;
   width: 100%;
   padding: 9rem 0 2.5rem 0;
+  position: relative;
 }
 .headline-image {
   img {
@@ -338,16 +339,75 @@ li {
 }
 
 @media screen and (min-width: 600px) {
+  h3 {
+    font-size: 2.5rem;
+    padding-bottom: 4.5rem;
+  }
+  .container {
+    padding: 4.5rem 2.5rem;
+  }
+  .headline-image {
+    img {
+      height: 35rem;
+    }
+  }
+
+  .today-text {
+    position: absolute;
+    bottom: 10rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    color: #ffffff;
+    padding: 4rem 12rem 0;
+  }
+
+  // play button overlay
+  .play-circle img {
+    height: 5rem;
+  }
+
+  // no-direct-flight
+  .no-direct-flight-content-container {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
+    img {
+      max-width: 100%;
+    }
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 1024) {
+  // around-the-world
+  .around-the-world-content-container {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 3rem;
+  }
 }
 
 @media screen and (min-width: 800px) {
-  //header
-  // .header-container {
+  .headline-image {
+    img {
+      height: 55rem;
+    }
+  }
+  .play-circle {
+    top: 35rem;
+  }
+  .today-text {
+    h2 {
+      font-size: 4rem;
+    }
+    p {
+      font-size: 1.8rem;
+    }
+  }
 
-  // }
   .row1-header {
     justify-content: space-between;
-    padding: 0 5rem 0 3rem;
+    padding: 0 4rem 0 3rem;
     height: 8.5rem;
   }
   h1 {
@@ -373,14 +433,9 @@ li {
     margin: 1.5rem;
   }
 
-  // .row1-header-right svg:hover,
-  // .icons-container svg:hover {
-
-  // }
-
-  // .scroll-menu {
-
-  // }
+  .scroll-menu ul {
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: 1025px) {
