--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ svg.header-logo {
   width: 100%;
   height: 22rem;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .today-text {
@@ -188,7 +188,7 @@ svg.header-logo {
   justify-content: flex-start;
   margin-bottom: 25px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 .content-card img {
   width: 100%;
@@ -248,7 +248,7 @@ svg.header-logo {
   justify-content: flex-start;
   margin-bottom: 25px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   text-align: center;
   align-items: center;
   margin-top: 2.5rem;
@@ -268,10 +268,19 @@ svg.header-logo {
 .share-the-love-card {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .social-detail {
   display: none;
+}
+
+.community {
+  margin: 0 9rem;
+}
+
+.community div {
+  padding: 2rem 2rem 7rem 2rem;
 }
 
 .become-a-member {
@@ -279,7 +288,6 @@ svg.header-logo {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 2rem 2rem 7rem 2rem;
 }
 
 .join {
@@ -315,7 +323,7 @@ svg.header-logo {
   justify-content: flex-start;
   margin-bottom: 25px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   width: 200px;
   margin-bottom: 5rem;
 }
@@ -325,6 +333,8 @@ svg.header-logo {
 
 h3.more {
   padding: 10px 0px 5px;
+  text-align: left;
+  font-size: 1.9rem;
 }
 
 footer p,
@@ -362,7 +372,7 @@ li {
     font-size: 2.5rem;
     padding-bottom: 4.5rem;
   }
-  .container:not(.today.container) {
+  .container {
     padding: 4.5rem 2.5rem;
   }
   .headline-image img {
@@ -388,8 +398,25 @@ li {
   .no-direct-flight-content-container img {
     max-width: 100%;
   }
+  .community {
+    margin: 0 10rem;
+  }
+  .more-to-love-content {
+    flex-direction: row;
+    width: auto;
+    justify-content: space-between;
+    gap: 2rem;
+    align-items: flex-start;
+  }
+  .more-to-love-content-card {
+    width: 300px;
+  }
+  .more-to-love-content-card img {
+    width: auto;
+    max-width: 100%;
+  }
 }
-@media screen and (min-width: 600px) and (max-width: 1024px) {
+@media screen and (min-width: 600px) and (max-width: 1024) {
   .around-the-world-content-container {
     flex-direction: row;
     justify-content: space-between;
@@ -445,6 +472,17 @@ li {
   .most-watched {
     flex-direction: row;
   }
+  .connect .icons-container {
+    margin: 0 auto;
+    max-width: 50rem;
+    margin-bottom: 4rem;
+  }
+  .connect svg {
+    margin: 3rem;
+  }
+  .community {
+    margin: 0 15rem;
+  }
 }
 @media screen and (min-width: 1024px) {
   .around-the-world-content-container {
@@ -452,8 +490,42 @@ li {
     gap: 2rem;
   }
   .around-the-world-top,
-  .around-the-world-bottom {
+.around-the-world-bottom {
     display: flex;
     gap: 2rem;
   }
-} /*# sourceMappingURL=styles.css.map */
+  .community {
+    display: flex;
+    margin: 0;
+    padding: 4rem;
+  }
+  .community div {
+    width: 50%;
+  }
+  .connect {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .connect .icons-container {
+    padding: 0;
+    margin: 1rem;
+    justify-content: space-between;
+    grid-template-columns: repeat(4, auto);
+  }
+  .connect svg {
+    background-color: #c9a16e;
+    margin: 0;
+  }
+  .more-to-love-content-card {
+    flex-direction: row;
+  }
+  .more-to-love-content-card img {
+    width: 150px;
+    height: 150px;
+    margin-right: 3rem;
+  }
+  .more-to-love-content-card h3 {
+    padding-top: 0;
+  }
+}/*# sourceMappingURL=styles.css.map */
