--- a/css/buttons.css
+++ b/css/buttons.css
@@ -60,19 +60,31 @@
   transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
 }
 
-.button,
-.button1 {
+.button {
   background-color: #ffffff;
   font-weight: 200;
   font-family: nunito;
   border-width: 1px;
-  padding: 1rem 4rem;
   font-size: 1.4rem;
-  margin: 2rem;
+  padding: 0.5rem;
   height: 4.1rem;
+  margin: 1rem;
 }
-.button:hover,
-.button1:hover {
+.button:hover {
   color: #c9a16e;
   box-shadow: 0px -1px #c9a16e inset;
+}
+
+.like {
+  width: 12rem;
+  margin-bottom: 3rem;
+}
+
+.subscribe {
+  width: 15rem;
+  margin-bottom: 2rem;
+}
+
+.member {
+  width: 28rem;
 }/*# sourceMappingURL=buttons.css.map */
