--- a/css/styles.css
+++ b/css/styles.css
@@ -528,4 +528,19 @@ li {
   .more-to-love-content-card h3 {
     padding-top: 0;
   }
+  .links-end ul {
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0;
+    padding: 5rem 0;
+  }
+  .links-end ul li {
+    padding: 1rem;
+  }
+  .copyright {
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0;
+    padding-bottom: 2rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
