--- a/css/styles.scss
+++ b/css/styles.scss
@@ -409,7 +409,7 @@ li {
   }
 }
 
-@media screen and (min-width: 600px) and (max-width: 1024) {
+@media screen and (min-width: 600px) and (max-width: 1024px) {
   // around-the-world
   .around-the-world-content-container {
     flex-direction: row;
