--- a/css/styles.scss
+++ b/css/styles.scss
@@ -353,7 +353,7 @@ li {
     font-size: 2.5rem;
     padding-bottom: 4.5rem;
   }
-  .container {
+  .container:not(.today) {
     padding: 4.5rem 2.5rem;
   }
   .headline-image {
