larger most watched

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,7 @@ svg.header-logo {
   padding-top: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .most-watched h3 {
   padding-bottom: 2rem;
@@ -253,6 +254,7 @@ svg.header-logo {
   align-items: center;
   margin-top: 2.5rem;
   margin-bottom: 0;
+  max-width: 37rem;
 }
 .most-watched-content-card img {
   max-width: 100%;
@@ -471,11 +473,11 @@ li {
   }
   .most-watched {
     flex-direction: row;
+    justify-content: space-evenly;
   }
   .connect .icons-container {
     margin: 0 auto;
     max-width: 50rem;
-    margin-bottom: 4rem;
   }
   .connect svg {
     margin: 3rem;
