--- a/css/styles.css
+++ b/css/styles.css
@@ -57,8 +57,10 @@ h4 {
 
 h1 {
   position: relative;
-  padding: 0.5rem 5rem 0;
+  padding: 0.5rem 5rem 0 0;
+  margin-left: 4.5rem;
   z-index: 999;
+  width: 20rem;
 }
 
 .row1-header {
@@ -445,9 +447,8 @@ li {
   }
   h1 {
     font-size: 0;
-    display: flex;
-    justify-content: center;
     padding: 0;
+    margin: 0 auto;
   }
   svg.header-logo {
     width: 34rem;
