--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,9 +4,6 @@ $lightgrey: #ffffff;
 $mediumgrey: #dcdcdc;
 $darkgrey: #ffffff;
 $grey: #f8f8f8;
-// fix these with new fonts and use grey color
-$font-regular: 700;
-$font-bold: 900;
 $greyfont: #666;
 
 // font
@@ -81,7 +78,7 @@ h4 {
   }
 }
 
-//header
+//header ---USE GRID TO ALIGN PROPERLY????---
 .header-container {
   position: fixed;
   width: 100%;
@@ -294,7 +291,7 @@ svg.header-logo {
   margin: 0 9rem;
 }
 .community div {
-  padding: 2rem 2rem 7rem 2rem;
+  padding: 2rem 4rem 7rem;
 }
 
 // become-a-member
@@ -303,7 +300,7 @@ svg.header-logo {
   text-align: center;
 }
 .join {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 .small {
   font-size: 1.2rem;
@@ -456,6 +453,12 @@ li {
   .share-the-love-card .button {
     display: none;
   }
+  .social-banner {
+    .icons-container {
+      grid-template-columns: repeat(8, auto);
+      justify-content: center;
+    }
+  }
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -492,8 +495,6 @@ li {
   }
   h1 {
     font-size: 0;
-    // display: flex;
-    // justify-content: center;
     padding: 0;
     margin: 0 auto;
   }
@@ -522,8 +523,24 @@ li {
   }
   .most-watched {
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
   }
+
+  .most-watched-card {
+    padding: 0 3rem;
+    display: flex;
+    width: 50%;
+    justify-content: center;
+  }
+
+  .container1 {
+    border-right: 0.1rem solid $gold;
+  }
+  .most-watched-content-card {
+    max-width: 37rem;
+    margin: 0 3rem;
+  }
+
   .connect {
     .icons-container {
       margin: 0 auto;
@@ -549,6 +566,11 @@ li {
     display: flex;
     gap: 2rem;
   }
+
+  .become-a-member {
+    border-right: 0.1rem solid #000;
+  }
+
   .community {
     display: flex;
     margin: 0;
@@ -558,16 +580,14 @@ li {
     width: 50%;
   }
   .connect {
-    @include flex-column-center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     .icons-container {
       padding: 0;
-      margin: 1rem;
-      justify-content: space-between;
-      grid-template-columns: repeat(4, auto);
-    }
-    svg {
-      background-color: #c9a16e;
       margin: 0;
+      width: 95%;
     }
   }
   // more-to-love
@@ -582,13 +602,19 @@ li {
       padding-top: 0;
     }
   }
-  .links-end ul {
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 0;
-    padding: 5rem 0;
-    li {
-      padding: 1rem;
+
+  .links-end {
+    margin: 0 2rem;
+    padding: 0 2rem;
+    ul {
+      flex-direction: row;
+      justify-content: space-between;
+      margin: 0;
+      padding: 5rem 0;
+      li {
+        padding: 1rem;
+        font-size: 1.4rem;
+      }
     }
   }
   .copyright {
@@ -596,6 +622,9 @@ li {
     justify-content: space-around;
     margin: 0;
     padding-bottom: 2rem;
+    p {
+      font-size: 1.4rem;
+    }
   }
   // share-the-love
   .share-the-love-content {
