--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ h3 {
   text-align: center;
   font-size: 1.8rem;
   padding-bottom: 2.5rem;
+  letter-spacing: 0.3rem;
 }
 
 h4 {
@@ -52,11 +53,11 @@ h4 {
   margin: 0;
   padding: 0 3rem;
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(4, 6rem);
   justify-content: space-between;
 }
 .icons-container svg {
-  margin: 3rem;
+  margin: 2rem;
 }
 
 .header-container {
@@ -194,6 +195,10 @@ svg.header-logo {
   align-items: center;
 }
 
+.no-direct-flight-content-container {
+  align-items: flex-start;
+}
+
 .content-card {
   display: flex;
   flex-direction: column;
@@ -215,6 +220,7 @@ svg.header-logo {
 .subscribe-to-newsletter .subscribe-title {
   text-align: center;
   width: 100%;
+  margin-bottom: 2rem;
 }
 .subscribe-to-newsletter p {
   padding: 0;
@@ -230,7 +236,8 @@ svg.header-logo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 5rem;
+  margin: 0 12rem;
+  max-width: 42.5rem;
 }
 .subscribe-to-newsletter h3 {
   padding-bottom: 0.8rem;
@@ -291,11 +298,16 @@ svg.header-logo {
 }
 
 .community {
-  margin: 0 9rem;
+  margin: 0 2rem;
 }
 
-.community div {
-  padding: 2rem 4rem 7rem;
+.community div:not(.icons-container) {
+  padding: 2rem 1.5rem 7rem;
+}
+
+.join {
+  font-size: 1.6rem;
+  margin-bottom: 1.5rem;
 }
 
 .become-a-member {
@@ -303,10 +315,6 @@ svg.header-logo {
   flex-direction: column;
   align-items: center;
   text-align: center;
-}
-
-.join {
-  font-size: 2rem;
 }
 
 .small {
@@ -317,10 +325,14 @@ svg.header-logo {
 }
 
 .connect {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .connect .icons-container {
   margin-bottom: 4rem;
+  width: 100%;
+  padding: 0;
 }
 
 .more-to-love-content {
@@ -398,7 +410,7 @@ li {
     right: 0;
     margin: 0 auto;
     color: #ffffff;
-    padding: 4rem 12rem 0;
+    padding: 4rem 5rem 0;
     text-shadow: 1px 1px 2px #000;
   }
   .today-text p {
@@ -417,6 +429,12 @@ li {
   }
   .community {
     margin: 0 10rem;
+  }
+  .community div:not(.icons-container) {
+    padding: 2rem 4rem 7rem;
+  }
+  .join {
+    font-size: 2rem;
   }
   .more-to-love-content {
     flex-direction: row;
