--- a/css/styles.scss
+++ b/css/styles.scss
@@ -52,6 +52,7 @@ h3 {
   text-align: center;
   font-size: 1.8rem;
   padding-bottom: 2.5rem;
+  letter-spacing: 0.3rem;
 }
 h4 {
   font-size: 2rem;
@@ -71,10 +72,10 @@ h4 {
   margin: 0;
   padding: 0 3rem;
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(4, 6rem);
   justify-content: space-between;
   svg {
-    margin: 3rem;
+    margin: 2rem;
   }
 }
 
@@ -209,6 +210,9 @@ svg.header-logo {
 .around-the-world-content-container {
   @include flex-column-center;
 }
+.no-direct-flight-content-container {
+  align-items: flex-start;
+}
 
 .content-card {
   @include card-layout;
@@ -223,6 +227,7 @@ svg.header-logo {
   .subscribe-title {
     text-align: center;
     width: 100%;
+    margin-bottom: 2rem;
   }
   p {
     padding: 0;
@@ -236,7 +241,8 @@ svg.header-logo {
   }
   form {
     @include flex-column-center;
-    margin: 0 5rem;
+    margin: 0 12rem;
+    max-width: 42.5rem;
   }
   h3 {
     padding-bottom: 0.8rem;
@@ -288,10 +294,14 @@ svg.header-logo {
 }
 // community
 .community {
-  margin: 0 9rem;
+  margin: 0 2rem;
 }
-.community div {
-  padding: 2rem 4rem 7rem;
+.community div:not(.icons-container) {
+  padding: 2rem 1.5rem 7rem;
+}
+.join {
+  font-size: 1.6rem;
+  margin-bottom: 1.5rem;
 }
 
 // become-a-member
@@ -299,9 +309,7 @@ svg.header-logo {
   @include flex-column-center;
   text-align: center;
 }
-.join {
-  font-size: 2rem;
-}
+
 .small {
   font-size: 1.2rem;
   .sign-in a {
@@ -310,9 +318,13 @@ svg.header-logo {
 }
 // connect
 .connect {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; // text-align: center;
   .icons-container {
     margin-bottom: 4rem;
+    width: 100%;
+    padding: 0;
   }
 }
 // more to love
@@ -382,7 +394,7 @@ li {
     right: 0;
     margin: 0 auto;
     color: #ffffff;
-    padding: 4rem 12rem 0;
+    padding: 4rem 5rem 0;
     text-shadow: 1px 1px 2px #000;
     p {
       color: #ffffff;
@@ -407,6 +419,14 @@ li {
   // community
   .community {
     margin: 0 10rem;
+  }
+
+  .community div:not(.icons-container) {
+    padding: 2rem 4rem 7rem;
+  }
+
+  .join {
+    font-size: 2rem;
   }
 
   // more to love
