--- a/css/styles.css
+++ b/css/styles.css
@@ -65,29 +65,25 @@ h4 {
   width: 100%;
   background-color: #ffffff;
   z-index: 99;
-}
-
-h1 {
-  position: relative;
-  padding: 0.5rem 5rem 0 0;
-  margin-left: 4.5rem;
-  z-index: 999;
-  width: 20rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .row1-header {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 7fr 2fr;
   justify-content: space-between;
-  padding: 0.5rem 5rem 0 2rem;
-  flex-wrap: nowrap;
+  padding: 0.5rem 5rem 0 1rem;
   background-color: #ffffff;
   position: absolute;
   top: 0;
   width: 100%;
 }
-.row1-header .row1-header-left {
-  display: flex;
+
+h1 {
   position: relative;
+  z-index: 999;
+  width: 20rem;
 }
 
 svg.header-logo {
@@ -109,6 +105,7 @@ svg.header-logo {
   overflow: auto;
   white-space: nowrap;
   background-color: #ffffff;
+  margin-top: 4.5rem;
 }
 
 .scroll-menu ul {
@@ -410,7 +407,7 @@ li {
     right: 0;
     margin: 0 auto;
     color: #ffffff;
-    padding: 4rem 5rem 0;
+    padding: 4rem 3.8rem 0;
     text-shadow: 1px 1px 2px #000;
   }
   .today-text p {
@@ -511,17 +508,15 @@ li {
     height: 8.5rem;
   }
   h1 {
-    font-size: 0;
-    padding: 0;
     margin: 0 auto;
   }
   svg.header-logo {
     width: 34rem;
-    padding: 0;
+    padding-right: 2rem;
   }
   .row1-header-left {
     width: 1.5rem;
-    justify-content: space-between;
+    display: flex;
     align-items: center;
   }
   .row1-header-right {
@@ -530,6 +525,9 @@ li {
   }
   .icon {
     margin: 1.5rem;
+  }
+  .scroll-menu {
+    margin-top: 8.5rem;
   }
   .scroll-menu ul {
     justify-content: center;
